--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,18 +2,19 @@ project:
   type: website
 
 website:
-  title: "Your_Name Data Science Portfolio"
+  title: "Zane Rowbotham"
   favicon: Images/favicon.png
   back-to-top-navigation: true
-  repo-url: https://github.com/your_url
+  repo-url: Welcome to my porfolio where you are able to see all the prjects I have worked on
   #repo-actions: [issue] #if you want to allow others to report issues on your site uncomment this line
 
   page-footer: 
     border: true
-    left: "Your_Name 2023©"
+    left: "Zane Rowbotham"
     right: 
       - icon: linkedin
-        href: Your_LinkedIn_URL
+        href: www.linkedin.com/in/zane-rowbotham
+
 
   navbar:
     background: primary
